# optic

./: CONTRIBUTING.md  Cargo.toml  Makefile.toml  README.md  fsync.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: build.yml  lint.yml  test.yml
docker/: dev.Dockerfile  prod.Dockerfile
src/: branch.rs  branches.rs  cli.rs  conf.rs  format.rs  inject.rs  locations.rs  main.rs  out.rs  required_preamble.tex  template.rs  util.rs
src/cmd/: build.rs  check.rs  commit.rs  completion.rs  mod.rs  new.rs  open.rs  reveal.rs  search.rs  trash.rs  watch.rs
src/cmds/: build.rs  check.rs  commit.rs  mod.rs  new.rs  setup.rs
