[package]
name = "kiwi-cli"
version = "1.0.0"
description = "🏫 Schoolwork as code"
authors = ["Matt Gleich <email@mattglei.ch>"]
edition = "2018"
repository = "https://github.com/gleich/kiwi/"
homepage = "https://kiwi.docs.mattglei.ch"
license = "MPL-2.0"
keywords = ["kiwi", "cli", "latex", "markdown"]

[dependencies]
clap = "3.0.0-beta.5"
toml = "0.5.8"
serde = { version = "1.0.130", features = ["derive"] }
dialoguer = { version = "0.9.0", features = ["fuzzy-select"] }
anyhow = "1.0.47"
colored = "2.0.0"
chrono = "0.4.19"
num-traits = "0.2.14"
strum = "0.23.0"
strum_macros = "0.23.1"
handlebars = "4.1.5"
serde_json = "1.0.71"
ordinal = "0.2.3"
which = "4.2.2"
console = "0.15.0"
walkdir = "2.3.2"
duct = "0.13.5"
git2 = "0.13.24"

[[bin]]
name = "kiwi"
path = "src/main.rs"
