[package]
name = "kiwi-cli"
version = "1.0.0"
description = "🏫 Schoolwork as code"
authors = ["Matt Gleich <email@mattglei.ch>"]
edition = "2021"
repository = "https://github.com/gleich/kiwi/"
homepage = "https://kiwi.docs.mattglei.ch"
license = "MPL-2.0"
keywords = ["kiwi", "cli", "latex", "markdown"]

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
strum = "0.23.0"
strum_macros = "0.23.0"
toml = "0.5.8"
anyhow = "1.0.53"
clap = "3.0.13"
chrono = "0.4.19"
num-traits = "0.2.14"
dialoguer = { version = "0.9.0", features = ["fuzzy-select"] }
handlebars = "4.2.1"
serde_json = "1.0.78"
ordinal = "0.3.2"

[[bin]]
name = "kiwi"
path = "src/main.rs"
