[package]
name = "optic"
version = "1.0.0"
description = "Schoolwork as code"
authors = ["Matt Gleich <email@mattglei.ch>"]
edition = "2021"
repository = "https://github.com/gleich/optic/"
license = "MPL-2.0"
keywords = ["optic", "kiwi", "cli", "latex", "markdown"]

[dependencies]
serde = { version = "1.0.136", features = ["derive"] }
strum = "0.23.0"
strum_macros = "0.23.0"
toml = "0.5.8"
anyhow = "1.0.53"
clap = "3.0.13"
chrono = "0.4.19"
num-traits = "0.2.14"
dialoguer = { version = "0.10.0", features = ["fuzzy-select"] }
handlebars = "4.2.1"
serde_json = "1.0.78"
ordinal = "0.3.2"
walkdir = "2.3.2"
colorful = "0.2.1"
term_cursor = "0.2.1"
notify = "4.0.17"
chrono-humanize = "0.2.1"
clap_complete = "3.1.0"
